--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -44,23 +44,23 @@ signal=10
 # Screen Brightness
 [script]
 label=
-# command=~/.config/i3/backlight.sh
-command=~/.scripts/brightness
+# command=/home/hendrik/.config/i3/backlight.sh
+command=/home/hendrik/.scripts/brightness
 color=#c13156
 interval=once
 signal=13
 
 [key_layout]
-command=~/.scripts/key_layout
+command=/home/hendrik/.scripts/key_layout
 label=⌨
-interval=5
+interval=15
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
 label=MEM
-command=~/.config/i3/memory.sh
+command=/home/hendrik/.config/i3/memory.sh
 separator=false
 interval=5
 
@@ -86,7 +86,7 @@ interval=300
 
 # WiFi SSID
 [script]
-command=~/.config/i3/ssid.sh
+command=/home/hendrik/.config/i3/ssid.sh
 color=#00FF00
 interval=10
 separator=false
@@ -136,7 +136,7 @@ interval=30
 #
 
 [calendar]
-command=~/.scripts/dateWithCalender
+command=/home/hendrik/.scripts/dateWithCalender
 interval=1
 label= 
 
