--- a/i3/config
+++ b/i3/config
@@ -201,8 +201,7 @@ bindsym $mod+shift+u exec $scripts/fzf/dmenu_open_uniDir
 # Rescale screen resolution
 bindsym $mod+shift+t exec $scripts/rescale_screen
 # Execute script to setup screens
-bindsym $mod+i exec $scripts/setup_displays --setup
-bindsym $mod+shift+i exec $scripts/setup_displays --off
+bindsym $mod+shift+i exec $scripts/setup_displays --toggle
 # Toggle zeal
 bindsym $mod+z exec $scripts/toggleZeal
 # Start firefox
